--- a/index.html
+++ b/index.html
@@ -2,29 +2,39 @@
 <html>
 <body>
 
-<img id="map" width="1328" height="1462" src="./DACH.png" alt="The Scream">
+<img id="map" width="1328" height="1462" src="./DACH.png" alt="map" style="display: none">
 <h3 style="text-align: center">Wo bist du gerade?</h3>
 <p style="text-align: center">Klicke bitte auf der Karte, wo du dich gerade befindest. Beim erneuten Klicken wird dein Punkt neu positioniert.</p>
 <canvas id="myCanvas" width="1338" height="1472" style="border:1px solid #d3d3d3; display: block; margin-left: auto; margin-right: auto">
 	Dein Browser unterstützt keine canvas-Elemente. Bitte benutze einen moderneren Browser.
 </canvas>
 
+<script src="socket.io.min.js"  type="text/javascript">></script>
 <script>
 window.onload = function() {
+	var socket = io();
   var c = document.getElementById("myCanvas");
   var ctx = c.getContext("2d");
   var img = document.getElementById("map");
   ctx.drawImage(img, 5, 5);
-  img.style.display = "none";
+
+	socket.on('locations', locations => {
+	  ctx.drawImage(img, 5, 5);
+		ctx.fillStyle = "rgba(0, 0, 200, 0.3)";
+		locations.forEach(l => drawLocation(l));
+	});
+
+	function drawLocation(l) {
+		ctx.beginPath();
+		ctx.arc(l.x, l.y, 4, 0, Math.PI * 2, false);
+		ctx.fill();
+	}
 
   function onMouseClick(e) {
-		ctx.beginPath();
-		ctx.fillStyle = "rgba(0, 0, 200, 0.3)";
-		const rect = c.getBoundingClientRect()
-		const x = e.clientX - rect.left
-		const y = e.clientY - rect.top
-		ctx.arc(x, y, 4, 0, Math.PI * 2, false);
-		ctx.fill();
+		const rect = c.getBoundingClientRect();
+		const x = e.clientX - rect.left;
+		const y = e.clientY - rect.top;
+		socket.emit('new location', {x: x, y: y});
 	}
 
   document.addEventListener("click", onMouseClick, false);
