reduce image size

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<img id="map" width="1328" height="1462" src="./DACH.png" alt="map" style="display: none">
+<img id="map" width="1328" height="1462" src="./map.jpg" alt="map" style="display: none">
 <h3 style="text-align: center">Wo bist du gerade?</h3>
 <p style="text-align: center">Klicke bitte auf der Karte, wo du dich gerade befindest. Beim erneuten Klicken wird dein Punkt neu positioniert.</p>
 <canvas id="myCanvas" width="1338" height="1472" style="border:1px solid #d3d3d3; display: block; margin-left: auto; margin-right: auto">
