--- a/index_ger.html
+++ b/index_ger.html
@@ -5,14 +5,14 @@
 <img id="map" width="1328" height="1462" src="./map.jpg" alt="map" style="display: none">
 <h3 style="text-align: center">Wo bist du gerade?</h3>
 <p style="text-align: center">Klicke bitte auf der Karte, wo du dich gerade befindest. Beim erneuten Klicken wird dein Punkt neu positioniert.</p>
-<canvas id="myCanvas" width="1338" height="1472" style="border:1px solid #d3d3d3; display: block; margin-left: auto; margin-right: auto">
+<canvas id="myCanvas" width="1338" height="1472" style="border:1px solid #d3d3d3; display: block; margin-left: auto; margin-right: auto; cursor: crosshair">
 	Dein Browser unterstützt keine canvas-Elemente. Bitte benutze einen moderneren Browser.
 </canvas>
 
-<script src="socket.io.min.js"  type="text/javascript">></script>
+<script src="socket.io.min.js"  type="text/javascript"></script>
 <script>
 window.onload = function() {
-	var socket = io();
+  var socket = io();
   var c = document.getElementById("myCanvas");
   var ctx = c.getContext("2d");
   var img = document.getElementById("map");
@@ -20,7 +20,7 @@ window.onload = function() {
 
 	socket.on('locations', locations => {
 	  ctx.drawImage(img, 5, 5);
-		ctx.fillStyle = "rgba(0, 0, 200, 0.3)";
+		ctx.fillStyle = "rgba(200, 0, 200, 0.3)";
 		locations.forEach(l => drawLocation(l));
 	});
 
