--- a/index_eng.html
+++ b/index_eng.html
@@ -4,7 +4,7 @@
 
 <img id="map" width="1887" height="1462" src="./map.jpg" alt="map" style="display: none">
 <h3 style="text-align: center">Where are you right now?</h3>
-<p style="text-align: center">Please click on the map where you are. When you click again, your point will be repositioned.</p>
+<p style="text-align: center">Please click on your current location. When you click again, your point will be repositioned.</p>
 <canvas id="myCanvas" width="1897" height="1472" style="border:1px solid #d3d3d3; display: block; margin-left: auto; margin-right: auto; cursor: crosshair">
 	Your browser does not support canvas elements. Please use a more modern browser.
 </canvas>
